--- a/Server/package.json
+++ b/Server/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "langchain": "^0.3.27"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
